--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,6 +7,6 @@ const pageTitle = "About";
 
     <h1>{pageTitle}</h1>
     <p>Based in Sydney, Australia.</p>
-    <p><img src="/images/me.jpg" style="max-width:800px;"/></p>
+    <p><img src="/images/me.jpeg" style="max-width:800px;"/></p>
     
 </BaseLayout>
