Improved mobile support

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,6 +1,8 @@
 ---
 ---
 <div class="navigation-container align-left">
+    <input type="checkbox" name="toggle" id="toggle">
+    
     <div class="navigation">
 
         <a href="/" class="index-link">Luke Blackman</a>
@@ -14,4 +16,6 @@
         </div>
 
     </div>
+
+    <label for="toggle">—<br>—<br>—</label>
 </div>
