--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,8 +5,16 @@ const pageTitle = "About";
 ---
 <BaseLayout pageTitle={pageTitle}>
 
-    <h1>{pageTitle}</h1>
-    <p>Based in Sydney, Australia.</p>
-    <p><img src="/images/me.jpeg" style="max-width:800px;"/></p>
+    <div class="entry align-left">
+
+        <div class="contents">
+
+            <h1>{pageTitle}</h1>
+            <p>Based in Sydney, Australia.</p>
+            <p><img src="/images/me.jpeg" style="max-width:100%;"/></p>
+
+        </div>
+
+    </div>
     
 </BaseLayout>
