--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -5,9 +5,15 @@ const pageTitle = "Contact";
 ---
 <BaseLayout pageTitle={pageTitle}>
 
-    <div id="main-content" style="max-width:1200">
-        <h1>Contact</h1>
-        <p>contact at lukeblackman _ com</p>
+    <div class="entry align-left">
+       
+        <div class="contents">
+            
+            <h1>{pageTitle}</h1>
+            <p>contact at lukeblackman _ com</p>
+
+        </div>
+
     </div>
     
 </BaseLayout>
