--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,7 @@ const pageTitle = "Luke Blackman";
 ---
 <BaseLayout pageTitle={pageTitle}>
 
-    <div class="posts entry">
-
-		<div id="breadcrumbs" style="display:none;">
-			<a href="#">Home</a> > <a href="#">Photos</a> > <a href="#">Bermuda Heights</a>
-		</div>
+    <div class="posts">
 
 		<a class="post photo" href="/images/gallery/1.jpg" style="
 			max-width:800;
@@ -120,4 +116,5 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 	</div>
+	
 </BaseLayout>
