--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,9 +57,23 @@ body.position-left .navigation-container {
     opacity: 0.85;
 }
 
-.entry h1{
+.entry {
+    display:flex;
+    min-height:100vh;
+}
+
+.entry .contents {
+    padding:1.5rem;
+    margin:0;
+}
+
+.entry h1 {
     font-size:2em;
     margin:0em 0 1.5rem;
+}
+
+.entry p {
+    margin:1.3em 0;
 }
 
 .posts {
@@ -122,48 +136,81 @@ body.position-left .navigation-container {
     margin:calc(1.5rem/4) 0 calc(1.5rem/2);
 }
 
+@media screen and (min-width: 800px) {
+    label[for="toggle"] {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 800px) {
 
-.navigation {
-    max-width: 100%;
-    flex-grow: 1;
+    .navigation {
+        max-width: 100%;
+        flex-grow: 1;
+    }
+
+    body {
+        padding-top: 4rem /* height of index link */ 
+    }
+
+    body.position-left {
+        padding-left: 0
+    }
+
+    body.position-right {
+        padding-right: 0
+    }
+
+    .navigation-container {
+        width: 100%;
+        height: auto;
+        display: flex;
+        box-sizing: border-box;
+        z-index: 1;
+        background: #FFFFFF;
+    }
+
+    .navigation {
+            height: 2rem; /* height of index link */
+    }
+
+    input[name="toggle"]:checked+.navigation {
+        min-height: 100vh;
+    }
+
+    input[name="toggle"]+.navigation>*:not(.index-link) {
+        display: none;
+    }
+
+    input[name="toggle"]:checked+.navigation>*:not(.index-link) {
+        display: block;
+    }
+
 }
 
-body {
-    padding-top: 4rem /* height of index link */ 
+@media screen and (max-width: 800px) {
+    .posts {
+        padding: 0 1.35rem;
+    }
+  
+    .post {
+        margin: 1rem 0.65rem;
+    }
 }
 
-body.position-left {
-    padding-left: 0
+@media screen and (max-width: 800px) {
+    .entry {
+        padding: 0 0;
+    }
 }
 
-body.position-right {
-    padding-right: 0
+@media screen and (max-width: 800px) {
+    .nav:last-of-type > a:first-of-type {
+        visibility: hidden;
+    }
 }
 
-.navigation-container {
-    width: 100%;
-    height: auto;
-    display: flex;
-    box-sizing: border-box;
-    z-index: 1;
-    background: #FFFFFF;
-}
-
-.navigation {
-        height: 2rem; /* height of index link */
-}
-
-input[name="toggle"]:checked+.navigation {
-    min-height: 100vh;
-}
-
-input[name="toggle"]+.navigation>*:not(.index-link) {
-    display: none;
-}
-
-input[name="toggle"]:checked+.navigation>*:not(.index-link) {
-    display: block;
-}
-
-}
+input[name="toggle"]{display:none;}
+input[name="toggle"]+.navigation>:not(.index-link){display:none;}
+input[name="toggle"]:checked+.navigation>:not(.index-link){display:block;}
+label[for="toggle"]{line-height:0.333;cursor:pointer;display:block;float:right;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
