--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -136,6 +136,29 @@ body.position-left .navigation-container {
     margin:calc(1.5rem/4) 0 calc(1.5rem/2);
 }
 
+input[name="toggle"] {
+    display:none;
+}
+
+label[for="toggle"] {
+    line-height: 0.333;
+    cursor: pointer;
+    display: block;
+    float: right;
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently  */
+}
+
 @media screen and (min-width: 800px) {
     label[for="toggle"] {
         display: none;
@@ -209,8 +232,3 @@ body.position-left .navigation-container {
         visibility: hidden;
     }
 }
-
-input[name="toggle"]{display:none;}
-input[name="toggle"]+.navigation>:not(.index-link){display:none;}
-input[name="toggle"]:checked+.navigation>:not(.index-link){display:block;}
-label[for="toggle"]{line-height:0.333;cursor:pointer;display:block;float:right;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
