Fixed image sizing on index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ const pageTitle = "Luke Blackman";
     <div class="posts">
 
 		<a class="post photo" href="/images/gallery/1.jpg" style="
-			max-width:800;
-			max-height:1200;
+			max-width:800px;
+			max-height:1200px;
 			width:calc(800px*400/1200);
 			flex-grow:calc(800*400/1200)">
 			<i style="padding-bottom:150%"></i>
@@ -17,8 +17,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/2.jpg" style="
-			max-width:800;
-			max-height:1200;
+			max-width:800px;
+			max-height:1200px;
 			width:calc(800px*400/1200);
 			flex-grow:calc(800*400/1200)">
 			<i style="padding-bottom:150%"></i>
@@ -26,8 +26,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/3.jpg" style="
-			max-width:1200;
-			max-height:800;
+			max-width:1200px;
+			max-height:800px;
 			width:calc(1200px*400/800);
 			flex-grow:calc(1200*400/800)">
 			<i style="padding-bottom:66.6%"></i>
@@ -35,8 +35,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/4.jpg" style="
-			max-width:800;
-			max-height:1200;
+			max-width:800px;
+			max-height:1200px;
 			width:calc(800px*400/1200);
 			flex-grow:calc(800*400/1200)">
 			<i style="padding-bottom:150%"></i>
@@ -44,8 +44,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/5.jpg" style="
-			max-width:1200;
-			max-height:800;
+			max-width:1200px;
+			max-height:800px;
 			width:calc(1200px*400/800);
 			flex-grow:calc(1200*400/800)">
 			<i style="padding-bottom:66.6%"></i>
@@ -53,8 +53,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/6.jpg" style="
-			max-width:800;
-			max-height:1200;
+			max-width:800px;
+			max-height:1200px;
 			width:calc(800px*400/1200);
 			flex-grow:calc(800*400/1200)">
 			<i style="padding-bottom:150%"></i>
@@ -62,8 +62,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/7.jpg" style="
-			max-width:800;
-			max-height:1200;
+			max-width:800px;
+			max-height:1200px;
 			width:calc(800px*400/1200);
 			flex-grow:calc(800*400/1200)">
 			<i style="padding-bottom:150%"></i>
@@ -71,8 +71,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/8.jpg" style="
-			max-width:800;
-			max-height:1200;
+			max-width:800px;
+			max-height:1200px;
 			width:calc(800px*400/1200);
 			flex-grow:calc(800*400/1200)">
 			<i style="padding-bottom:150%"></i>
@@ -89,8 +89,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/10.jpg" style="
-			max-width:800;
-			max-height:1200;
+			max-width:800px;
+			max-height:1200px;
 			width:calc(800px*400/1200);
 			flex-grow:calc(800*400/1200)">
 			<i style="padding-bottom:150%"></i>
@@ -98,8 +98,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/11.jpg" style="
-			max-width:1200;
-			max-height:800;
+			max-width:1200px;
+			max-height:800px;
 			width:calc(1200px*400/675);
 			flex-grow:calc(1200*400/675)">
 			<i style="padding-bottom:56.25%"></i>
@@ -107,8 +107,8 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 		<a class="post photo" href="/images/gallery/12.jpg" style="
-			max-width:1200;
-			max-height:800;
+			max-width:1200px;
+			max-height:800px;
 			width:calc(1200px*400/800);
 			flex-grow:calc(1200*400/800)">
 			<i style="padding-bottom:66.6%"></i>
@@ -116,5 +116,5 @@ const pageTitle = "Luke Blackman";
 		</a>
 
 	</div>
-	
+
 </BaseLayout>
