Added new image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,6 +43,15 @@ const pageTitle = "Luke Blackman";
 			<img src="/images/gallery/4.jpg">
 		</a>
 
+		<a class="post photo" href="/images/gallery/13.jpg" style="
+			max-width:1200px;
+			max-height:800px;
+			width:calc(1200px*400/800);
+			flex-grow:calc(1200*400/800)">
+			<i style="padding-bottom:66.6%"></i>
+			<img src="/images/gallery/13.jpg">
+		</a>
+
 		<a class="post photo" href="/images/gallery/5.jpg" style="
 			max-width:1200px;
 			max-height:800px;
